ingresses/5-hubmgt/overlays/ingresses/whoami/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.localdemo.mageekbox.eu`) || Host(`tst.localdemo.mageekbox.eu`)
      services:
        - name: whoami
          port: 80
      middlewares:
      #  - name: whoami-oidc
        - name: whoami-headers
        - name: whoami-redirect
  tls:
